--- a/examples/index.html
+++ b/examples/index.html
@@ -7,33 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Demo</title>
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-    <link href="../dist/index.css" rel="stylesheet" />
-    <script src="../dist/goodiesUploader.min.js" type="text/javascript"></script>
+    <link href="../dist/goodies-uploader.css" rel="stylesheet" />
+    <script src="../dist/goodies-uploader.js" type="text/javascript"></script>
 </head>
 
 <body>
     <div id="app">
         <div id="uploader"></div>
     </div>
-    <script type="text/javascript">
-        const vm = new Vue({
-            el: '#app',
-            mounted() {
-                this.$nextTick(() => {
-                    goodiesUploader.Upload({
-                        action: 'http://172.16.2.20:10086/upload/',
-                        ruleText: '只能上传jpg/png文件，且不超过500kb',
-                        success: (res, file, fileList) => {
-                            console.log(res.data);
-                        },
-                        error: (file, fileList) => {
-                            console.log(fileList);
-                        }
-                    }).render(document.getElementById('uploader'));
-                })
-            },
-        })
-    </script>
+    <script type="text/javascript" src="./index.js"></script>
 </body>
 
 </html>
